feature: add item

--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,5 @@
   --color-text-dark: #ffffff;
   --color-text-light-muted: rgba(0, 0, 0, 0.65);
   --color-text-dark-muted: rgba(255, 255, 255, 0.65);
+  --color-btn: #3086ff;
 }
